--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   html {
-    @apply h-full;
+    @apply h-full font-sans;
   }
   body {
     @apply h-full;
